--- a/index.html
+++ b/index.html
@@ -49,10 +49,10 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav ml-auto">
-            <a class="nav-item nav-link active" href="#">Beranda <span class="sr-only">(current)</span></a>
-            <a class="nav-item nav-link" href="#product">Produk</a>
-            <a class="nav-item nav-link" href="#order">Pemesanan</a>
-            <a class="nav-item nav-link" href="#about">Tentang</a>
+            <a class="nav-item nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
+            <a class="nav-item nav-link" href="#product">Product</a>
+            <a class="nav-item nav-link" href="#order">Order</a>
+            <a class="nav-item nav-link" href="Profile.html">Profile</a>
           </div>
         </div>
       </div>
@@ -147,28 +147,6 @@
     </section>
     <!-- akhir order -->
 
-    <!-- About -->
-      <section id="about" class="container about">
-        <div class="row justify-content-center">
-          <div class="col-lg-8">
-            <h4 data-aos="fade-right">Tentang <span>Atik Merpati</span></h4>
-            <h5 data-aos="fade-left" data-aos-delay="500">"Berdiri sejak 2014, Atik Merpati merupakan toko cemilan berbasis UMKM yang di kelola oleh seorang pelaku usaha bernama Atik Suryati. Toko ini menjual produk-produk cemilan khas Indonesia seperti kacang bawang, kering kentang dan kembang goyang."</h5>
-          </div>
-        </div>
-        <div class="row justify-content-center">
-          <div class="col-6 justify-content-center d-flex">
-            <figure class="figure">
-              <img src="asset/ibu atik 2.jpg" class="figure-img img-fluid rounded-circle" alt="Atik Suryati">
-              <figcaption class="figure-caption">
-                <h5>Atik Suryati</h5>
-                <p>Owner</p>
-              </figcaption>
-            </figure>
-          </div>
-        </div>        
-      </section>
-    <!-- Akhir About -->
-
     <!-- footer -->
 
     <footer>
@@ -176,6 +154,11 @@
         <div class="text-center instagram">
           <a href="https://www.instagram.com/atikmerpati/"><img src="asset/instagram.png" alt="Atikmerpati"></a>
           <p>Atikmerpati</p>
+          <address class="address">
+            Lumbu Barat II-H No.45 B<br>
+            Bojong Rawalumbu, Bekasi City<br>
+            West Java, Indonesia
+          </address>
         </div>
         <p class="mb-10 text-center copy">&copy;Copyright<i> Atik Merpati</i> 2022. All right reserved.</p>
       </div>
