--- a/Profile.html
+++ b/Profile.html
@@ -17,6 +17,9 @@
     <!-- AOS -->
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 
+    <link href="./asset/Logo 2.png" rel="icon">
+    <link href="./asset/Logo 2.png" rel="Atikmerpati">
+
     <title>Atik Merpati Profile</title>
 </head>
 <body>
