--- a/index.html
+++ b/index.html
@@ -34,6 +34,10 @@
     <!-- My CSS -->
     <link rel="stylesheet" href="style.css">
 
+    <!-- Favicons -->
+    <link href="./asset/Logo 2.png" rel="icon">
+    <link href="./asset/Logo 2.png" rel="Atikmerpati">
+
     <title>Atik Merpati</title>
   </head>
   <body>
