--- a/Profile.html
+++ b/Profile.html
@@ -32,9 +32,9 @@
         <p class="text" data-aos="fade-left" data-aos-delay="700">
           <span>Atik Merpati</span> merupakan toko cemilan berbasis UMKM yang di kelola oleh seorang pelaku usaha bernama <span>Atik Suryati</span>. UMKM yang sudah berdiri sejak 2014 dan bersertifikat Halal ini menjual produk-produk cemilan khas Indonesia seperti kacang bawang, kering kentang dan kembang goyang.
         </p>
-        <div data-aos="fade-left" data-aos-delay="1000">
+        <div class="address" data-aos="fade-left" data-aos-delay="1000">
           <h2>Visit us at :</h2><br>
-          <address class="address">
+          <address>
             Lumbu Barat II-H No.45 B<br>
             Bojong Rawalumbu, Bekasi City<br>
             West Java, Indonesia
